add_subdirectory(concepts)
add_subdirectory(type_traits)

# NOTE: coverage is not working for metaprogramming.
# Uncomment next line to make coverage of all sources tested in current dir.
#make_directory_coverage(${CMAKE_CURRENT_SOURCE_DIR})

# --------------------------------------------------------------------
